# mkdocs_deploy_confluence

./: .pre-commit-config.yaml  pyproject.toml
mkdocs_deploy_confluence/: __init__.py  plugin.py  site_builder.py
tests/: test_mkdocs_deploy_confluence.py
